Bug 159386 - Selecting all in a certain table causes assert in SfxPoolItem::SetWhich with a debug build
Summary: Selecting all in a certain table causes assert in SfxPoolItem::SetWhich with ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 159392 159408 159434 (view as bug list)
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2024-01-26 14:34 UTC by Buovjaga
Modified: 2024-01-31 11:38 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash (6.54 KB, text/plain)
2024-01-26 14:34 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-01-26 14:34:13 UTC
Created attachment 192181 [details]
GDB trace of crash

1. With a debug build, open attachment 191950 [details]
2. Focus into the table on the first page, Ctrl-A, Ctrl-A

Arch Linux 64-bit, X11
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b83ebf42c535528b73baac2407b347f19070d07
CPU threads: 8; OS: Linux 6.7; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 25 January 2024
Comment 1 Julien Nabet 2024-01-26 20:54:48 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Armin: one for you?
Comment 2 Telesto 2024-01-27 07:37:16 UTC
*** Bug 159392 has been marked as a duplicate of this bug. ***
Comment 3 Telesto 2024-01-27 07:58:04 UTC
FWIW: issue isn't limited to debug builds; see bug 159392. Master builds are 'unusable' for testing right now, IMHO. Future bibisects in the range with the issue present will be quite challenging...
Comment 4 Buovjaga 2024-01-27 08:02:54 UTC
(In reply to Telesto from comment #3)
> FWIW: issue isn't limited to debug builds; see bug 159392. Master builds are
> 'unusable' for testing right now, IMHO. Future bibisects in the range with
> the issue present will be quite challenging...

Well, the steps for my issue are different than your bug 159392, but maybe the root cause is the same.

Regarding difficulty with future bibisects, in severe cases Xisco can rebuild a range while applying a patch to fix the issue (as happened recently with 7.6 [1]). In this case the range is not very long, because your bug 159392 is not yet seen in the latest build of win64-24.8 repo: 7afd11f8e476884662c18db85445752cc030b2e2 from 10 January. So hopefully we can quickly bibisect it after Xisco pushes new builds.

1: https://lists.freedesktop.org/archives/libreoffice-qa/2023-November/011564.html
Comment 5 Telesto 2024-01-27 19:01:16 UTC
(In reply to Buovjaga from comment #4)
> Regarding difficulty with future bibisects, in severe cases Xisco can
> rebuild a range while applying a patch to fix the issue (as happened
> recently with 7.6 [1]). 

Good to know. My unfounded fear was a unbibisectable range if not addressed soon; that's clearly not the case .. a relief :-)
Comment 6 Telesto 2024-01-28 13:15:11 UTC
*** Bug 159408 has been marked as a duplicate of this bug. ***
Comment 7 Telesto 2024-01-28 13:16:12 UTC
Bug 159408 comment 1
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Armin Le Grand ; Could you possibly take a look at this one?
Thanks
 cad5a2eca916806372f476b380bd34e7d3f388b1 is the first bad commit
commit cad5a2eca916806372f476b380bd34e7d3f388b1
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Fri Jan 26 09:21:24 2024 +0100

    source 38072fd7eb7d53237efbe0d8bacc7db1c4f3131c

162414: ITEM: Solve SfxVoidItem(0) situation | https://gerrit.libreoffice.org/c/core/+/162414
Comment 8 Buovjaga 2024-01-30 06:04:43 UTC
*** Bug 159434 has been marked as a duplicate of this bug. ***
Comment 9 Caolán McNamara 2024-01-30 09:17:07 UTC
https://gerrit.libreoffice.org/c/core/+/162736 seems to be enough to get this working again
Comment 10 Commit Notification 2024-01-30 21:33:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed16c7fbdce8bf22d32d2a2b3d250e382ea404d9

Resolves: tdf#159386 deref of null result of Clone

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2024-01-30 21:34:34 UTC
good enough, at least for now, I hope
Comment 12 Buovjaga 2024-01-31 11:38:23 UTC
Fix confirmed, thanks

Arch Linux 64-bit, X11
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4253acd5300c526b062fc5b5f109e93e6e9d08df
CPU threads: 8; OS: Linux 6.7; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 31 January 2024