Resolves: tdf#159386 deref of null result of Clone

Change-Id: I8e903a20bd28c778a39418bc89e42ae1c6932dc1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162736
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>